--- a/adminlogin.html
+++ b/adminlogin.html
@@ -34,7 +34,7 @@ button:hover {
 .cancelbtn {
   width: auto;
   padding: 10px 18px;
-:  background-color: #f44336;
+  background-color: #f44336;
 }
 
 /* Center the image and position the close button */
@@ -127,7 +127,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Modal Login Form</h2>
+<h2>admin Login Form</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
